@@ -1,0 +1,72 @@
+/* AUTOGENERATED FILE. DO NOT EDIT. */
+
+//=======Test Runner Used To Run Each Test Below=====
+#define RUN_TEST(TestFunc, TestLineNum) \
+{ \
+  Unity.CurrentTestName = #TestFunc; \
+  Unity.CurrentTestLineNumber = TestLineNum; \
+  Unity.NumberOfTests++; \
+  if (TEST_PROTECT()) \
+  { \
+      setUp(); \
+      TestFunc(); \
+  } \
+  if (TEST_PROTECT() && !TEST_IS_IGNORED) \
+  { \
+    tearDown(); \
+  } \
+  UnityConcludeTest(); \
+}
+
+//=======Automagically Detected Files To Include=====
+#include "unity.h"
+#include <setjmp.h>
+#include <stdio.h>
+#include "config.h"
+#include "ntp_stdlib.h"
+#include <errno.h>
+
+//=======External Functions This Runner Calls=====
+extern void setUp(void);
+extern void tearDown(void);
+extern void test_NullBuf1(void);
+extern void test_NullBuf2(void);
+extern void test_SmallBuf(void);
+extern void test_MatchBuf(void);
+extern void test_BigBuf(void);
+extern void test_SimpleArgs(void);
+
+
+//=======Suite Setup=====
+static void suite_setup(void)
+{
+extern int change_logfile(const char*, int);
+change_logfile("stderr", 0);
+}
+
+//=======Test Reset Option=====
+void resetTest(void);
+void resetTest(void)
+{
+  tearDown();
+  setUp();
+}
+
+char const *progname;
+
+
+//=======MAIN=====
+int main(int argc, char *argv[])
+{
+  progname = argv[0];
+  suite_setup();
+  UnityBegin("sbprintf.c");
+  RUN_TEST(test_NullBuf1, 7);
+  RUN_TEST(test_NullBuf2, 14);
+  RUN_TEST(test_SmallBuf, 23);
+  RUN_TEST(test_MatchBuf, 34);
+  RUN_TEST(test_BigBuf, 45);
+  RUN_TEST(test_SimpleArgs, 56);
+
+  return (UnityEnd());
+}
